--- a/hw05.ipynb
+++ b/hw05.ipynb
@@ -62,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -298,7 +298,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 10,
       "id": "8e40cdb7",
       "metadata": {},
       "outputs": [
@@ -366,7 +366,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -397,28 +397,22 @@
             "                    0 (strong br.)\n",
             "                    0 (separation)\n",
             "                    0 (heuristics)\n",
-            "Objective Value: 29098.0625\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
+            "Objective Value: 29098.0625\n",
             "Waste Transport Matrix:\n",
             "2-dimensional DenseAxisArray{Float64,2,...} with index sets:\n",
             "    Dimension 1, 1:3\n",
             "    Dimension 2, 1:3\n",
             "And data, a 3×3 Matrix{Float64}:\n",
             "   0.0  100.0  0.0\n",
-            "   0.0   90.0  0.0\n",
-            " 120.0    0.0  0.0"
+            "   0.0   "
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "\n",
+            "90.0  0.0\n",
+            " 120.0    0.0  0.0\n",
             "Recycle Matrix:\n",
             "2-dimensional DenseAxisArray{Float64,2,...} with index sets:\n",
             "    Dimension 1, 1:3\n",
@@ -426,12 +420,6 @@
             "And data, a 3×3 Matrix{Float64}:\n",
             " 0.0  0.0   0.0\n",
             " 0.0  0.0  56.025000000000006\n",
-            " 0.0  0.0   0.0\n",
-            "Selected Destinations:\n",
-            "1-dimensional DenseAxisArray{Float64,1,...} with index sets:\n",
-            "    Dimension 1, 1:3\n",
-            "And data, a 3-element Vector{Float64}:\n",
-            " 1.0\n",
             " "
           ]
         },
@@ -439,15 +427,14 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "1.0\n",
-            " 1.0"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "\n"
+            "0.0  0.0   0.0\n",
+            "Selected Destinations:\n",
+            "1-dimensional DenseAxisArray{Float64,1,...} with index sets:\n",
+            "    Dimension 1, 1:3\n",
+            "And data, a 3-element Vector{Float64}:\n",
+            " 1.0\n",
+            " 1.0\n",
+            " 1.0\n"
           ]
         }
       ],
@@ -555,7 +542,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [
         {
@@ -613,16 +600,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/latex": [
-              "$ 60 W_{1,1} + 246.7 W_{2,1} + 182.7 W_{3,1} + 90 W_{4,1} + 166.7 W_{1,2} + 156.7 W_{2,2} + 196.7 W_{3,2} + 176.7 W_{4,2} + 105 W_{1,3} + 95 W_{2,3} + 115 W_{3,3} + 30 W_{4,3} + 64 R_{2,1} + 36 R_{3,1} + 105 R_{2,3} + 2000 Y_{1} + 1500 Y_{2} + 2500 Y_{3} $"
+              "$ 60 W_{1,1} + 296.7 W_{2,1} + 232.7 W_{3,1} + 90 W_{4,1} + 272.4 W_{1,2} + 262.4 W_{2,2} + 302.4 W_{3,2} + 70 W_{4,2} + 105 W_{1,3} + 95 W_{2,3} + 115 W_{3,3} + 30 W_{4,3} + 114 R_{2,1} + 86 R_{3,1} + 105 R_{2,3} + 2000 Y_{1} + 50 R_{1,1} + 1500 Y_{2} + 60 W_{1,4} + 60 W_{2,4} + 60 W_{3,4} + 60 R_{2,4} + 60 R_{3,4} + 2500 Y_{3} $"
             ],
             "text/plain": [
-              "60 W[1,1] + 246.7 W[2,1] + 182.7 W[3,1] + 90 W[4,1] + 166.7 W[1,2] + 156.7 W[2,2] + 196.7 W[3,2] + 176.7 W[4,2] + 105 W[1,3] + 95 W[2,3] + 115 W[3,3] + 30 W[4,3] + 64 R[2,1] + 36 R[3,1] + 105 R[2,3] + 2000 Y[1] + 1500 Y[2] + 2500 Y[3]"
+              "60 W[1,1] + 296.7 W[2,1] + 232.7 W[3,1] + 90 W[4,1] + 272.4 W[1,2] + 262.4 W[2,2] + 302.4 W[3,2] + 70 W[4,2] + 105 W[1,3] + 95 W[2,3] + 115 W[3,3] + 30 W[4,3] + 114 R[2,1] + 86 R[3,1] + 105 R[2,3] + 2000 Y[1] + 50 R[1,1] + 1500 Y[2] + 60 W[1,4] + 60 W[2,4] + 60 W[3,4] + 60 R[2,4] + 60 R[3,4] + 2500 Y[3]"
             ]
           },
           "metadata": {},
@@ -631,7 +618,7 @@
       ],
       "source": [
         "I = 1:4\n",
-        "J = 1:3\n",
+        "J = 1:4\n",
         "K = 1:3\n",
         "Waste_Transport_Model = Model(HiGHS.Optimizer)\n",
         "\n",
@@ -665,8 +652,22 @@
         "else\n",
         "    @constraint(Waste_Transport_Model, Y[3] == 1)\n",
         "end\n",
+        "if (W[1, 4] + W[2, 4] + W[3, 4] + R[1, 4] + R[2, 4] + R[3, 4] == 0)\n",
+        "    @constraint(Waste_Transport_Model, Y[4] == 0)\n",
+        "else\n",
+        "    @constraint(Waste_Transport_Model, Y[4] == 1)\n",
+        "end\n",
         "\n",
-        "@objective(Waste_Transport_Model, Min, 60*W[1,1] + 246.7*W[2,1] + 182.7*W[3,1] + 90*W[4,1] + 166.7*W[1,2] + 156.7*W[2,2] + 196.7*W[3,2] + 176.7*W[4,2] + 30*W[1,3] + 20*W[2,3] + 40*W[3,3] + 30*W[4,3] + 64*R[2,1] + 36*R[3,1] + 30*R[2,3] + 2000*Y[1] + 1500*Y[2] + 2500*Y[3] + 75*W[1,3] + 75*W[2,3] + 75*W[3,3] + 75*R[2,3])\n"
+        "@objective(Waste_Transport_Model, Min, 10 * W[1,1] + 246.7 * W[2,1] + 182.7 * W[3,1] + 90 * W[4,1] +\n",
+        "166.7 * W[1,2] + 156.7 * W[2,2] + 196.7 * W[3,2] + 70 * W[4,2] +\n",
+        "30 * W[1,3] + 20 * W[2,3] + 40 * W[3,3] + 30 * W[4,3] +\n",
+        "64 * R[2,1] + 36 * R[3,1] + 30 * R[2,3] +\n",
+        "2000 * Y[1] + 50 * (W[1,1] + W[2,1] + W[3,1] + R[1,1] + R[2,1] + R[3,1]) +\n",
+        "1500 * Y[2] + 7 * (40 * 0.3775) * (W[1,2] + W[2,2] + W[3,2]) +\n",
+        "60 * (W[1,4] + W[2,4] + W[3,4] + R[2,4] + R[3,4]) +\n",
+        "2500 * Y[3] + 75 * (W[1,3] + W[2,3] + W[3,3] + R[2,3]))\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -682,7 +683,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [
         {
@@ -691,27 +692,27 @@
           "text": [
             "Running HiGHS 1.6.0: Copyright (c) 2023 HiGHS under MIT licence terms\n",
             "Presolving model\n",
-            "9 rows, 15 cols, 37 nonzeros\n",
-            "7 rows, 13 cols, 26 nonzeros\n",
+            "7 rows, 11 cols, 26 nonzeros\n",
+            "4 rows, 8 cols, 13 nonzeros\n",
             "\n",
             "Solving MIP model with:\n",
-            "   7 rows\n",
-            "   13 cols (0 binary, 0 integer, 0 implied int., 13 continuous)\n",
-            "   26 nonzeros\n",
+            "   4 rows\n",
+            "   8 cols (0 binary, 0 integer, 0 implied int., 8 continuous)\n",
+            "   13 nonzeros\n",
             "\n",
             "        Nodes      |    B&B Tree     |            Objective Bounds              |  Dynamic Constraints |       Work      \n",
             "     Proc. InQueue |  Leaves   Expl. | BestBound       BestSol              Gap |   Cuts   InLp Confl. | LpIters     Time\n",
             "\n",
-            "         0       0         0   0.00%   9585.6          inf                  inf        0      0      0         0     0.0s\n",
-            " T       0       0         0   0.00%   9585.6          56927.4191        83.16%        0      0      0         7     0.0s\n",
+            "         0       0         0   0.00%   20432.625       inf                  inf        0      0      0         0     0.0s\n",
+            " T       0       0         0   0.00%   20432.625       40736.85          49.84%        0      0      0         3     0.0s\n",
             "\n",
             "Solving report\n",
             "  Status            Optimal\n",
-            "  Primal bound      56927.4191\n",
-            "  Dual bound        56927.4191\n",
+            "  Primal bound      40736.85\n",
+            "  Dual bound        40736.85\n",
             "  Gap               0% (tolerance: 0.01%)\n",
             "  Solution status   feasible\n",
-            "                    56927.4191 (objective)\n",
+            "                    40736.85 (objective)\n",
             "                    0 (bound viol.)\n",
             "                    0 (int. viol.)\n",
             "                    0 (row viol.)\n",
@@ -719,24 +720,27 @@
             "                    0.00 (presolve)\n",
             "                    0.00 (postsolve)\n",
             "  Nodes             1\n",
-            "  LP iterations     7 (total)\n",
+            "  LP iterations     3 (total)\n",
             "                    0 (strong br.)\n",
             "                    0 (separation)\n",
             "                    0 (heuristics)\n",
-            "Objective Value: 56927.4191\n",
+            "Objective Value: 40736.85\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
             "Waste Transport Matrix:\n",
-            "W[1,1] = 43.667\n",
-            "W[1,2] = 56.333\n",
+            "W[1,1] = 100.0\n",
+            "W[1,2] = 0.0\n",
             "W[1,3] = 0.0\n",
             "W[2,1] = 0.0\n",
-            "W[2,2] = 90.0\n",
-            "W[2,3] = -0.0\n",
+            "W[2,2] = 0.0\n",
+            "W[2,3] = 90.0\n",
             "W[3,1] = 0.0\n",
-            "W[3,2] = 10.0\n",
-            "W[3,3] = 110.0\n",
-            "W[4,1] = 0.0\n",
-            "W[4,2] = 0.0\n",
-            "W[4,3] = 100.0\n"
+            "W[3,2] = 0.0\n",
+            "W[3,3] = 120.0\n"
           ]
         }
       ],
@@ -771,8 +775,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Minimum cost with New Landfill = 56927.41\n",
-        "Minimum cost without landfill = 55374.06\n",
+        "Minimum cost with New Landfill = 47736.85\n",
+        "Minimum cost without landfill = 40736.85\n",
         "\n",
         "I would not recommend that the city builds new landfill becuase it costs more money. \n"
       ]
